more UI work done and mysterious flickering issue resolved!

--- a/clientapp/src/components/Avatar/TextBubble/TextBubble.module.css
+++ b/clientapp/src/components/Avatar/TextBubble/TextBubble.module.css
@@ -50,3 +50,11 @@ root {
         margin-left: 4rem;
     }
 }
+
+@media (max-width: 350px) {
+    .bubble {
+        padding: 1.5rem 3rem;
+        margin-left: 1.5rem;
+    }
+}
+
