--- a/clientapp/src/pages/SplashPage/SplashPage.module.css
+++ b/clientapp/src/pages/SplashPage/SplashPage.module.css
@@ -15,7 +15,11 @@
 }
 
 .fontCol2 {
+    font-size: 2rem;
+}
 
+.sage {
+    font-size: 2.5rem;
 }
 
 .greeting {
@@ -30,8 +34,6 @@
 .fontCol2 {
     color: var(--type-col-2);
 }
-
-
 
 @keyframes slide-in-to-right {
     from {
@@ -75,7 +77,6 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    
 }
 
 .flexContainer a {
@@ -103,7 +104,6 @@
     height: 100%;
     width: 100%;
     overflow: hidden;
-    
 }
 
 .ToLeft {
@@ -152,38 +152,49 @@
         flex-flow: row wrap;
         justify-content: space-between;
     }
+    .fontCol2 {
+        font-size: 3.2rem;
+    }
+    .sage {
+        font-size: 3.5rem;
+    }
 }
 
 @media (min-width: 1100px) {
-    .textModal:nth-child(1), .textModal:nth-child(2) {
+    .textModal:nth-child(1),
+    .textModal:nth-child(2) {
         width: 90%;
     }
-
     .Hide {
         transform: translate(-200rem) !important
     }
 }
 
 @media (max-width: 360px) {
-    
-    .Link {
-        padding: .5rem 1rem;
-    }
-
     .textModal {
         margin: .75rem 0rem;
-        
     }
-
     .textModal p {
         font-size: 1.6rem;
     }
-
     .textModal h3 {
         font-size: 1.75rem;
     }
+}
 
+@media (max-width: 420px) {
+    .Link {
+        padding: .5rem 1rem;
+    }
     .flexContainer div {
         font-size: 1.75rem;
+    }
+}
+@media (max-width: 350px) {
+    .Link {
+        padding: .25rem .5rem;
+    }
+    .flexContainer div {
+        font-size: 1.6rem;
     }
 }
