--- a/clientapp/src/pages/StoryPage/StoryPage.module.css
+++ b/clientapp/src/pages/StoryPage/StoryPage.module.css
@@ -33,13 +33,11 @@
 /* Wraps buttons */
 
 .ButtonBox {
-    /* position: absolute; */
     display: flex;
     align-items: center;
     justify-content: space-around;
     grid-row: 7 / -1;
     grid-column: 1 / -1;
-    /* padding-top: 2.5rem; */
     border: solid medium var(--btn-box-border-col);
     overflow-y: scroll;
     /* overflow-x: scroll; */
@@ -47,13 +45,12 @@
     flex-shrink: 1;
     max-height: 40rem;
     flex-flow: row wrap;
-    /* padding-bottom: 1rem; */
 }
 
 .ButtonBox:hover div:not(:hover) {
     transform: scale(.95);
     opacity: .5;
-    box-shadow: 1px 3px 2px 1px var(--box-shadow-nothover); 
+    box-shadow: 1px 3px 2px 1px var(--box-shadow-nothover);
 }
 
 .ButtonBox div {
@@ -73,37 +70,6 @@
     grid-column: 1 / 6;
 }
 
-/* Styling first paragraph in the story page intro */
-
-.firstIntro {
-    /* padding-top: 1.5rem; */
-    grid-column: 1 / 6;
-    grid-row: 1 / 3;
-}
-
-.firstIntro p {
-    font-size: 2.5rem;
-}
-
-.secondIntro p,
-.thirdIntro p {
-    font-size: 2rem;
-}
-
-/* Styling second paragraph in the story page intro */
-
-.secondIntro {
-    grid-column: 1 / 6;
-    grid-row: 3 / 5;
-}
-
-/* Styling third paragraph in the story page intro */
-
-.thirdIntro {
-    grid-column: 1 / 6;
-    grid-row: 5 / 7;
-}
-
 /* Styling specific to introductory messages */
 
 .introModal {
@@ -112,8 +78,12 @@
 }
 
 .introModal p {
+    font-weight: 600;
+    font-family: "Playfair Display";
+}
+
+.introModal .Papyrus {
     font-family: "papyrus";
-    font-weight: 1000;
 }
 
 .introModal div {
@@ -133,22 +103,6 @@
     width: 100%;
 }
 
-/* .textModal div {}
-
-.Hide {} */
-
-.testButton {
-    padding: 2rem;
-    background-color: red;
-    max-height: 25%;
-    max-width: 75%;
-    font-size: 5rem;
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: 10;
-}
-
 .multiLine {
     /* display: block; */
     white-space: pre-wrap;
@@ -159,6 +113,10 @@
 
 .addSpaceBottom {
     margin-bottom: 3rem
+}
+
+.textEmphasis {
+    color: var(--theme-green);
 }
 
 @media (min-width: 600px) {
@@ -178,14 +136,12 @@
         grid-column: 1 / 6;
     }
     .ButtonBox {
-        /* padding-top: 6rem; */
+        
     }
 }
 
 @media (min-width: 1000px) {
-    .introModal div {
-        padding: 1rem 1rem;
-    }
+
 }
 
 @media (max-width: 360px) {
